# ballistic-calculator

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/calculator/: drag.rs  mod.rs  physics.rs
src/models/: environment.rs  mod.rs  projectile.rs  trajectory.rs
src/utils/: conversions.rs
